deploy/eks/sample/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhookie
  namespace: "default"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhookie
  template:
    metadata:
      annotations:
      labels:
        app: webhookie
    spec:
      containers:
        - image: hookiesolutions/webhookie:latest
          imagePullPolicy: Always
          name: webhookie-community
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 4200
              protocol: TCP
