deploy/eks/sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: webhookie
  name: webhookie-service
  namespace: "default"
spec:
  selector:
    app: webhookie
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: backend
    - protocol: TCP
      port: 4200
      targetPort: 4200
      name: backend
