deploy/eks/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhookie
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: webhookie
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: webhookie
                port:
                  number: 4300
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: webhookie
                port:
                  number: 8080
